# multilingual-layer-analysis

./: README.md  main.py  pyproject.toml
config/: extraction.yaml
scripts/: run_all_lape.sh  run_lape.sh  run_mt.sh  run_nt.sh  run_plot.sh  run_tc.sh  run_tc_all.sh  run_tc_all_rm.sh
src/main/: run_activation_nexttoken.py  run_dim_reduction.py  run_extraction.py  run_intervention.py  run_neuron_activation_plot.py  run_silhouette.py  run_ss_perlayer.py
src/utils/: activation_saver.py  activation_visualizer.py  causallm_hooked_model.py  const.py  data_loader.py  lape_extraction.py  neuron_extractor.py  neuron_selection.py  neuron_visualizer.py  seq2seq_hooked_model.py  sheets.py  vocabulary_similarity.py
